--- a/full_uni_cbow_100_twitter/.gitattributes
+++ b/full_uni_cbow_100_twitter/.gitattributes
@@ -1,1 +1,3 @@
 full_uni_cbow_100_twitter/*.mdl filter=lfs diff=lfs merge=lfs -text
+full_uni_cbow_100_twitter/*.npy filter=lfs diff=lfs merge=lfs -text
+*.npy filter=lfs diff=lfs merge=lfs -text
